Add release option to pom.xml